syntax = "proto3";

package proto;

option go_package = "./proto;brandpb";

message Brand {
  int32 id = 1;
  string name = 2;
  string description = 3;
  string country = 4;
  bool active = 5;
}

message BrandRequest {
  int32 id = 1;
}

message Empty {}

message BrandList {
  repeated Brand brands = 1;
}

service BrandService {
  rpc GetAllBrands (Empty) returns (BrandList);
  rpc GetBrandByID (BrandRequest) returns (Brand);
}
